# ramspeed

./: .gitignore  Cargo.toml  LOG.md  PROJECT_BRIEF.md  RAMSpeed.slnx  README.md  STATE.yaml  build.rs  optiRAM.slnx
.github/workflows/: release.yml
.signpath/: signing-policy.yml
docs/plans/: 2026-03-14-tray-reliability-plan.md  2026-03-15-installer-startup-hardening-plan.md
docs/superpowers/plans/: 2026-03-24-algorithmic-improvements.md
docs/superpowers/specs/: 2026-03-24-algorithmic-improvements-design.md  2026-03-24-performance-optimization-design.md  2026-03-24-startup-polish-design.md  results.tsv
installer/: RAMSpeed.iss  optiRAM.iss
src/: app.rs  graph.rs  main.rs  memory_info.rs  monitor.rs  optimizer.rs  privilege.rs  process_list.rs  settings.rs  task_scheduler.rs
src/RAMSpeed/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  RAMSpeed.csproj  app.manifest
src/optiRAM/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest  optiRAM.csproj
tests/RAMSpeed.Tests/: HysteresisTests.cs  InstallerPayloadCopierTests.cs  MemoryInfoServiceTests.cs  RAMSpeed.Tests.csproj  SelfTrimPolicyTests.cs  SingleInstanceActivationServiceTests.cs  StepEffectivenessTrackerTests.cs  TaskSchedulerHelperTests.cs  TrayTooltipFormatterTests.cs
tests/optiRAM.Tests/: HysteresisTests.cs  InstallerPayloadCopierTests.cs  MemoryInfoServiceTests.cs  SelfTrimPolicyTests.cs  SingleInstanceActivationServiceTests.cs  StepEffectivenessTrackerTests.cs  TaskSchedulerHelperTests.cs  TrayTooltipFormatterTests.cs  optiRAM.Tests.csproj
tools/: gen_icon.py
(+43 files in other folders)
