[package]
name = "ramspeed"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
image = { version = "0.25", default-features = false, features = ["ico"] }
tray-icon = "0.19"
muda = "0.16"
single-instance = "0.3"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
]

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1
